# rpg_sdl2_rust

./: .pre-commit-config.yaml  Cargo.toml  config.json
data/: config.json
src/: direction.rs  error.rs  event.rs  gfx.rs  keymap.rs  main.rs  point.rs  resources.rs  text.rs  utils.rs
src/data/: font.rs  gfx.rs  map.rs  mod.rs  text.rs
src/gfx/: animation.rs  mod.rs  renderer.rs  spritesheet.rs  texture.rs  tileset.rs
src/scene/: main_menu.rs  map.rs  mod.rs
