[package]
name = "rpg_sdl2_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"

[dependencies.sdl2]
version = "0.35.1"
default-features = false
features = ["image", "mixer", "ttf"]